--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,17 +3,11 @@ name: Deploy marimo app to GitHub Pages
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 permissions:
   contents: read
   pages: write
   id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
@@ -31,21 +25,13 @@ jobs:
     - name: 📦 Install dependencies
       run: |
         pip install --upgrade pip
-        pip install marimo
         pip install "numpy<2.0"
-        pip install pandas
-        pip install scipy
-        pip install zarr
-        pip install matplotlib
-        pip install seaborn
-        pip install h5py
-        pip install numexpr
-        pip install scikit-allel
+        pip install marimo pandas scipy zarr matplotlib seaborn h5py numexpr scikit-allel
     
-    - name: 📄 Export notebook
+    - name: 📄 Export and prepare files
       run: |
-       mkdir -p dist
-        marimo export html AIM_app.py -o dist/index.html --mode run
+        mkdir -p dist
+        marimo export html-wasm AIM_app.py -o dist --mode run
         cp -r resources dist/ || true
         cp *.pdf dist/ || true
         echo "Files in dist:" && ls -la dist/
@@ -53,7 +39,7 @@ jobs:
     - name: 📦 Upload Pages Artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: output_dir
+        path: dist
 
   deploy:
     needs: build
@@ -61,10 +47,6 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    
-    permissions:
-      pages: write
-      id-token: write
     
     steps:
     - name: 🌐 Deploy to GitHub Pages
